# dishwasher-bot

./: Dockerfile  README.md  pyproject.toml  shell.nix
.github/workflows/: buildMaster.yml  testPr.yml
src/: __init__.py  commands.py  main.py
