[tool.poetry]
name = "dishwasher-bot"
version = "0.1.0"
description = "Matrix bot for our dishwasher sign"
authors = ["Tim Neumann <neumantm@fius.informatik.uni-stuttgart.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
#simplematrixbotlib = "^2.6.1"
simplematrixbotlib =  { git = "https://github.com/i10b/simplematrixbotlib.git", rev = "0e6e570a" }
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.4.3"

[tool.black]
line-length = 120
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
